src/index.css
html, body {
  margin: 0;
  overflow: hidden;
  font-family: 'Inter', sans-serif;
}

.nav--container {
  margin: 0;
  width: 100vw;
  background: white;
  font-weight: 700;
  padding: 5px 20px;
  display: flex;
  align-items: center;
  box-shadow: 0 2px 2px -2px rgba(0,0,0,.3);
}

.nav--container > img {
  width: 140px;
}

.nav--links {
  margin-left: auto;
  padding-right: 50px;
}

.nav--logout {
  padding-left: 25px;
}

.signin--container{
  margin: 0;
  background-color: rgba(0,0,0,.06);
  height: 100vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
}

.google--signin {
  background: white;
  display: flex;
  align-items: center;
  border-radius: 5px;
  font-weight: bold;
  cursor: pointer;
}

.google--img {
  width: 20px;
  padding: 3px 5px 3px 3px;
}

.search--bar {
  margin: 50px auto 50px auto;
  width: 300px;
  height: 40px;
  display: flex;
  align-items: center;
  background-color: white;
  border-radius: 100px;
}

.search--field {
  border: none;
  padding-left: 20px;
  background: transparent;
  outline: none;
  font-size: 17px;
}

.search--button {
  background: transparent;
  margin-left: auto;
  margin-right: 10px;
  padding-right: 35px;
  width: 30px;
  height: 30px;
  border: none;
}

.search--button:hover {
  cursor: pointer;
}

.search--icon {
  border: none;
  background: transparent;
  width: 30px; 
}

.profiles--main {
  background-color: rgba(0,0,0,.06);
  overflow-y: auto;
  height: 95.2vh;
}

.profiles--wrapper {
  display: flex;
  height: 300px;
  align-items: center;
  position: relative;
}

.profiles--container {
  overflow: hidden;
  margin: auto auto auto 50px;
  height: 500px;
  width: 100%;
  display: flex;
  align-items: flex-start;
  justify-content: start;
  transform: translateX(0px);
  transition: all .5s ease;
}

.card {
  display: flex;
  flex-direction: column;
  margin: 20px 0px 0px 20px;
  max-width: 265px;
  border: solid rgb(5, 80, 5);
  border-radius: 13px;
  height: 420px;
}

.card--name--container {
  display: flex;
  justify-content: space-between;
  margin: 0;
  align-items: flex-start;
  padding: 5px;
}

.card--name {
  display: flex;
  flex-direction: column;
  margin: 10px 0 0 0;
  align-items: start;
  max-width: 180px;
}

.card--person--name {
  margin: 0;
}

.card--name > p, li {
  font-style: italic;
  font-size: 12px;
  margin: 0;
}

.card--age--wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: space-between;
  height: 167px;
}

.card--age--wrapper > h2 {
  margin: 5px 0 0 0;
  font-size: 32px;
}

ul {
  padding-left: 10px;
}

.card--image {
  width: 265px;
  height: 265px;
  border-radius: 10px 10px 0 0;
  margin: 0;
  cursor: pointer;
}

.back-arrow {
  position: absolute;
  cursor: pointer;
  width: 50px;
  height: 70px;
  left: 0;
  padding: 10px 0px 10px 0px;
  margin-right: auto;
  background-color: rgba(45, 207, 12, 0.4);
  z-index: 99;
}

.fwd-arrow {
  position: absolute;
  cursor: pointer;
  width: 45px;
  height: 70px;
  right: 0;
  padding: 10px 0px 10px 0px;
  margin-left: auto;
  background-color: rgba(45, 207, 12, 0.4);
  z-index: 99;
  transform: rotate(180deg);
}

